; ModuleID = '/home/carl/AnghaBench/freebsd/lib/msun/tests/extr_cexp_test.c_test_zero.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/msun/tests/extr_cexp_test.c_test_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ALL_STD_EXCEPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_zero to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_zero() #0 {
  %1 = load i32, i32* @ALL_STD_EXCEPT, align 4
  %2 = call i32 @testall(double 0.000000e+00, double 1.000000e+00, i32 %1, i32 0, i32 1)
  %3 = load i32, i32* @ALL_STD_EXCEPT, align 4
  %4 = call i32 @testall(double -0.000000e+00, double 1.000000e+00, i32 %3, i32 0, i32 1)
  %5 = call double @CMPLXL(double 0.000000e+00, double -0.000000e+00)
  %6 = call double @CMPLXL(double 1.000000e+00, double -0.000000e+00)
  %7 = load i32, i32* @ALL_STD_EXCEPT, align 4
  %8 = call i32 @testall(double %5, double %6, i32 %7, i32 0, i32 1)
  %9 = call double @CMPLXL(double -0.000000e+00, double -0.000000e+00)
  %10 = call double @CMPLXL(double 1.000000e+00, double -0.000000e+00)
  %11 = load i32, i32* @ALL_STD_EXCEPT, align 4
  %12 = call i32 @testall(double %9, double %10, i32 %11, i32 0, i32 1)
  ret void
}

declare dso_local i32 @testall(double, double, i32, i32, i32) #1

declare dso_local double @CMPLXL(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
